adicionando rotas e inicio de tela de stastiticas

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
         "./src/components/*"
       ],
       "@routes/*": [
-        "./src/routes/*"
+        "src/routes/*"
       ],
       "@screens/*": [
         "./src/screens/*"
